# CerebrumOS

./: .gitignore  ADD_SCREENSHOTS.md  CMakeLists.txt  COMPLETE_SETUP_GUIDE.md  README.md  SETUP_COMPLETE.md  cleanup_and_push.ps1  docker-compose.yml  quick_setup.ps1  setup_and_run.ps1
.github/workflows/: ci.yml
backend/: cerebrum.db  main.py
backend/core/: benchmark_engine.py  decision_engine.py  managers.py  websocket_manager.py
backend/database/: db.py
backend/repositories/: metrics_repo.py
backend/routes/: inference.py  metrics.py  settings.py
backend/services/: inference_service.py  metrics_service.py
core_cpp/include/cache/: lfu_cache.hpp  lru_cache.hpp  response_cache.hpp
core_cpp/include/cerebrum/concurrency/: spinlock.hpp  thread_pool.hpp  worker_state.hpp
core_cpp/include/cerebrum/math/: tensor_math.hpp
core_cpp/include/cerebrum/memory/: memory_manager.hpp  paged_allocator.hpp  radix_tree.hpp
core_cpp/include/cerebrum/runtime/: event_bus.hpp  runtime_pipeline.hpp
core_cpp/include/scheduler/: adaptive_scheduler.hpp
core_cpp/src/: engine_wrapper.cpp
docs/: BENCHMARK_METHODOLOGY.md  EXPERIMENTAL_RESULTS.md  HLD.md  LLD.md  MEMORY_DESIGN.md  README.md  SCHEDULER_DESIGN.md
docs/images/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: MetricsPanel.tsx  MlfqChart.tsx  Sidebar.tsx  Simulator.tsx  VramGridCanvas.tsx  WorkerPool.tsx
frontend/src/store/: telemetryStore.ts
k8s/: cerebrumos-deployment.yaml
tests/cpp/: test_cache.cpp
tests/python/: test_api.py
(+19 files in other folders)
